--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 	<h1>subir este archivo con git</h1>
 	<p style="color: blue;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ullam dicta dolor possimus soluta quis tempore veniam incidunt ex, unde iusto nam doloribus, facere, asperiores cum, non adipisci architecto provident!</p>
+	<h2>cambio controlado</h2>
 </body>
 </html>
